--- a/App/Properties/Settings.settings
+++ b/App/Properties/Settings.settings
@@ -1,7 +1,18 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="RGB_Crustacean.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="pathName" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="Device1" Type="RGB_Crustacean.Device" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="Device2" Type="RGB_Crustacean.Device" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="Device3" Type="RGB_Crustacean.Device" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+  </Settings>
 </SettingsFile>
